@@ -1,3 +1,7 @@
+2008-07-08  David Zeuthen  <davidz@redhat.com>
+
+	* POTFILES.in: hal/*.c moved to monitor/hal/*.c
+
 2008-06-14  Andre Klapper  <a9016009@gmx.de>
 
 	* POTFILES.in: added programs/gvfs-mkdir.c.
